Fix title spacing

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -104,7 +104,7 @@
     }
 
     h1.title {
-      @apply !text-3xl;
+      @apply !text-3xl !mb-6;
     }
 
     ol, ul {
